--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 </head>
 
 <body>
+  <!-- 问答环节 -->
+  <div id="quiz-section">
+    <h1>欢迎来到生日祝福！</h1>
+    <p>回答以下问题，才能进入：</p>
+    <p id="question">“小桔子🍊”最喜欢的水果是什么？</p>
+    <input type="text" id="answer-input" placeholder="请输入答案">
+    <button id="submit-btn">提交</button>
+    <p id="error-msg" style="color: red; display: none;">答案错误，请重试！</p>
+  </div>
   <div class="container">
     <div class="one">
       <h1 class="one">
