--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <button id="submit-btn">提交</button>
     <p id="error-msg" style="color: red; display: none;">答案错误，请重试！</p>
   </div>
-  <div class="container">
+  <!-- 主动画部分 -->
+  <div class="container" style="display: none;" id="main-section">
     <div class="one">
       <h1 class="one">
         <span data-node-name="greeting">Hey</span>
