--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
     <button id="submit-btn">提交</button>
     <p id="error-msg" style="color: red; display: none;">答案错误，请重试！</p>
   </div>
-  <div class="container">
-    <div class="one">
-      <h1 class="one">
-        <span data-node-name="greeting">Hey</span>
-        <span data-node-name="name">Lydia</span>
+
+  <!-- 主内容 -->
+  <div id="main-section" style="display: none;">
+    <div class="container">
+      <div class="one">
+        <h1 class="one">
+          <span data-node-name="greeting">Hey</span>
+          <span data-node-name="name">Lydia</span>
       </h1>
       <p class="two" data-node-name="greetingText">I really like your name btw!</p>
     </div>
