--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
 <body>
   <!-- 问答环节 -->
   <div id="quiz-section">
-    <h1>欢迎来到生日祝福！</h1>
+    <h1>“小桔子🍊”我来考考你！</h1>
     <p>回答以下问题，才能进入：</p>
-    <p id="question">“小桔子🍊”最喜欢的水果是什么？</p>
+    <p id="question">
+     电动机通过一根绳子吊起质量为 8kg 的物体，<br>
+     绳的拉力不能超过 120N，电动机的功率不能超过1200W。<br>
+     要将此物体用最快的方式吊高 162.2m，<br>
+     (已知物体接近目标高度时开始以最大速度匀速上升)，<br>
+     请问所需时间是多少？
+    </p>
     <input type="text" id="answer-input" placeholder="请输入答案">
     <button id="submit-btn">提交</button>
     <p id="error-msg" style="color: red; display: none;">答案错误，请重试！</p>
