--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
   <!-- 主内容 -->
   <div id="main-section" style="display: none;">
+    <!-- 背景音乐 -->
+    <audio id="bg-music" src="audio/river.mp3" loop autoplay></audio>
     <div class="container">
       <div class="one">
         <h1 class="one">
